# hytale-mod-watcher

./: Cargo.toml  Dockerfile
.github/workflows/: build.yml
src/: main.rs
